Commit 03/08 - EPS para assistir na pagina inical

--- a/MaratonandoApp/Client/_Imports.razor
+++ b/MaratonandoApp/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using MaratonandoApp.Shared.Models.Film
 @using MaratonandoApp.Shared.Models.User
 @using MaratonandoApp.Shared.Models.Series
+@using System.Linq;
